--- a/css/main.scss
+++ b/css/main.scss
@@ -1946,3 +1946,15 @@ $baseurl: '{{ site.baseurl }}/images';
 		max-width: 52%;
 	}
 }
+b.currentPosition {
+	color: black;
+	font-weight: 900;
+}
+
+#example11positionSelector {
+	margin-top: 20px;
+}
+
+.hidden {
+	display: none;
+}
