--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,7 +12,7 @@
 
     <script>
 if (window.location.href.indexOf('/popper.js') !== -1) {
-    window.location.href = "{{page.url}}" + window.location.pathname
+    window.location.href = "{{site.url}}" + "{{page.url}}"
 }
   </script>
 
