--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,7 +11,7 @@
     <!--[if lte IE 9]><link rel="stylesheet" href="{{ "/css/ie9.css" | prepend: site.baseurl }}" /><![endif]-->
 
     <script>
-if (window.location.href.indexOf('/popper.js') !== -1) {
+if (window.location.href.indexOf('github.io/popper.js') !== -1) {
     window.location.href = "{{site.url}}" + "{{page.url}}"
 }
   </script>
