--- a/css/main.scss
+++ b/css/main.scss
@@ -1960,7 +1960,7 @@ b.currentPosition {
 }
 
 .page-layout {
-    h3 {
+    h3, h4 {
         text-transform: none;
 		letter-spacing: initial;
     }
